--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ MONGO_URL=mongodb+srv://Divey:070104@cluster0.z44xvpe.mongodb.net/dbats?retryWri
 ACCESS_SECRET=naty56839@4464*ghj/
 
 COOKIE_SECRET=dfsdfe6876fds9%t&SD&*
+
+NODE_ENV="production"
